--- a/Pizzeria.Infrastructure/Pizzeria.Infrastructure.csproj
+++ b/Pizzeria.Infrastructure/Pizzeria.Infrastructure.csproj
@@ -16,7 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Pizzeria.Interfaces\Pizzeria.Interfaces.csproj" />
+	  <ProjectReference Include="..\Pizzeria.Domain\Pizzeria.Domain.csproj" />
+	  <ProjectReference Include="..\Pizzeria.Services\Pizzeria.Services.csproj" />
 	</ItemGroup>
 	
 </Project>
