--- a/Pizzeria.Persistence/Pizzeria.Persistence.csproj
+++ b/Pizzeria.Persistence/Pizzeria.Persistence.csproj
@@ -22,11 +22,12 @@
 		<PackageReference Include="Ulid" Version="1.3.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Pizzeria.Domain\Pizzeria.Domain.csproj" />
-	  <ProjectReference Include="..\Pizzeria.Interfaces\Pizzeria.Interfaces.csproj" />
+	  <ProjectReference Include="..\Pizzeria.Services\Pizzeria.Services.csproj" />
 	</ItemGroup>
 
 </Project>
