--- a/Pizzeria.Interfaces/Pizzeria.Interfaces.csproj
+++ b/Pizzeria.Interfaces/Pizzeria.Interfaces.csproj
@@ -5,23 +5,24 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
+	
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<InternalsVisibleTo Include="Pizzeria.Tests" />
-		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+		<PackageReference Include="Ulid" Version="1.3.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
-	  <PackageReference Include="Mapster" Version="7.4.0" />
+		<Folder Include="Models\Payments\" />
+		<Folder Include="Models\Products\" />
+		<Folder Include="Models\Shops\" />
 	</ItemGroup>
 	
 	<ItemGroup>
 	  <ProjectReference Include="..\Pizzeria.Domain\Pizzeria.Domain.csproj" />
-	  <ProjectReference Include="..\Pizzeria.Interfaces\Pizzeria.Interfaces.csproj" />
 	</ItemGroup>
 
 </Project>
