--- a/Pizzeria.Rest/Pizzeria.Rest.csproj
+++ b/Pizzeria.Rest/Pizzeria.Rest.csproj
@@ -14,12 +14,21 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-		<PackageReference Include="FluentValidation" Version="11.9.0" />
-		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
-		<PackageReference Include="Mapster" Version="7.4.0" />
-		<PackageReference Include="MediatR" Version="12.2.0" />
+		<PackageReference Include="Api.Controllers" Version="1.0.0" />
+		<PackageReference Include="Api.Cors" Version="1.0.0" />
+		<PackageReference Include="Api.Exceptions" Version="1.0.0" />
+		<PackageReference Include="Api.Filters" Version="1.0.0" />
+		<PackageReference Include="Api.FluentValidation" Version="1.0.0" />
+		<PackageReference Include="Api.Http.Logging" Version="1.0.0" />
+		<PackageReference Include="Api.Logging" Version="1.0.0" />
+		<PackageReference Include="Api.Result" Version="1.0.0" />
+		<PackageReference Include="Api.Swagger" Version="1.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Pizzeria.Infrastructure\Pizzeria.Infrastructure.csproj" />
+	  <ProjectReference Include="..\Pizzeria.Persistence\Pizzeria.Persistence.csproj" />
+	  <ProjectReference Include="..\Pizzeria.Services\Pizzeria.Services.csproj" />
 	</ItemGroup>
 
 </Project>
