Add Connection string

--- a/Pizzeria.Rest/appsettings.json
+++ b/Pizzeria.Rest/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "PizzeriaDbContext": "DataSource=file:PizzeriaDbContext.db?mode=memory&cache=shared"
+    },
     "AllowedHosts": "*",
     "Serilog": {
         "Using": [ "Serilog.Sinks.Email" ],
